<resources>
    <string name="global_try_again">Tentar novamente</string>
    <string name="global_cancel">Cancelar</string>
    <string name="global_do_login">Fazer login</string>
    <string name="global_ok">OK</string>
    <string name="error_title">Oops!</string>
    <string name="error_unknown">Não foi possível completar a operação. Tente novamente mais tarde. Se o problema persistir entre em contato conosco.</string>
    <string name="error_network">Não foi possível completar a operação. Verifique sua conexão e tente novamente.</string>
    <string name="error_unprocessable">Não foi possível completar a operação. Os seguintes problemas foram encontrados:\n\n%s</string>
    <string name="error_unauthorized_login_now">Não foi possível completar a operação. Sua sessão expirou. Por favor faça login novamente.</string>
    <string name="error_not_found">Não encontrado</string>
    <string name="error_server_internal">Não foi possível completar a operação. Tente novamente mais tarde. Se o problema persistir entre em contato conosco.</string>
    <string name="error_timeout">Tempo expirado. Por favor, tente novamente.</string>
    <string name="activity_login_error">Email ou senha errados.</string>
    <string name="global_wait">Aguarde...</string>
    <string name="validation_name">Nome inválido</string>
    <string name="validation_email">Email inválido</string>
    <string name="validation_phone_number">Número de telefone inválido</string>
    <string name="validation_cpf">CPF inválido</string>
    <string name="validation_password">Senha inválida</string>
    <string name="validation_password_confirmation">Confirmação diferente da senha</string>
    <string name="global_facebook">Facebook</string>
    <string name="global_google">Google</string>
    <string name="global_or">Ou</string>
    <string name="global_yes">Sim</string>
    <string name="global_no">Não</string>
    <string name="hint_username">Usuário</string>
    <string name="hint_password">Senha</string>
    <string name="activity_login_sign_in">Entrar</string>
    <string name="activity_login_sign_up">Criar uma conta</string>
    <string name="activity_login_forgot_password">Esqueci minha senha</string>
    <string name="activity_login_please_wait_for_result">Aguarde o resultado do login para prosseguir.</string>
    <string name="activity_register">Cadastro</string>
    <string name="activity_register_choose_picture">Escolher foto</string>
    <string name="hint_full_name">Nome Completo</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Telefone</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_password_confirmation">Confirmar senha</string>
    <string name="activity_register_submit">Finalizar cadastro</string>
    <string name="activity_recover_password">Recuperar senha</string>
    <string name="activity_recover_password_inform_email">Informe o seu email para recuperar sua senha</string>
    <string name="activity_recover_password_send">Enviar</string>
    <string name="activity_recover_password_success">Verifique a sua caixa de entrada e siga as instruções do email para recuperar sua senha.</string>
    <string name="error_facebook_sdk">O Facebook não nos devolveu nenhuma informação para realizar o login. Por favor, tente novamente.</string>
    <string name="error_facebook_denied_permissions">É necessário aceitar todas as permissões no Facebook para realizar o login. Por favor, tente novamente.</string>
    <string name="error_invalid_username">Usuário Inválido</string>
    <string name="error_invalid_password">Senha Inválida</string>
    <string name="global_send">Enviar</string>
    <string name="global_pick_avatar_using">Escolher imagem usando:</string>
    <string name="activity_sign_up">Criar Conta</string>

    <!-- Global -->
    <string name="global_action_bar_title">Facom em Foco</string>
    <string name="global_action_search">Pesquisar</string>

    <!-- Activity Main -->
    <string name="activity_main_for_you">Para você</string>
    <string name="activity_main_all">Todas</string>
    <string name="activity_main_your_posts">Seus Posts</string>
    <string name="activity_main_more">Mais</string>

    <!-- Activity About -->
    <string name="activity_about_title">Sobre o aplicativo</string>
    <string name="activity_about_full_text">O Facom em Foco é um aplicativo para dispositivos móveis Android desenvolvido por alunos de Engenharia de Software, cujo objetivo é permitir que professores possam transmitir facilmente informações para alunos da Facom.</string>

    <!-- Activity Help -->
    <string name="activity_help_title">Ajuda</string>
    <string name="activity_help_introduction_title">Ajuda</string>
    <string name="activity_help_introduction_text">As informações são publicadas em forma de pequenas notícias que possuem até 280 caracteres, um link, uma imagem e algumas tags. O usuário pode escolher de quais tags quer receber notificações. O App pode ser utilizado sem login. Somente professores possuem nome de usuário e senha.</string>
    <string name="activity_help_tags_title">Tags</string>
    <string name="activity_help_tags_text">Representam um grupo de notícias de um determinado tipo. As tags são (CC, EC, ES, SI, TADS, TRC, IC, Estágio, TCC, Evento, Palestra, Monitoria, Concurso, Prova e Pós-Graduação). O usuário pode escolher de quais tags quer receber notificações.</string>
    <string name="activity_help_login_title">Login</string>
    <string name="activity_help_login_text">Apenas professores cadastrados podem realizar login.  Quando ele está logado, uma nova opção aparece “Seus posts”, onde serão listados todos os posts realizados pelo professor logado e um botão (+) que permite a criação de uma nova notícia</string>
    <string name="activity_help_news_title">Criar Notícia</string>
    <string name="activity_help_news_text">Uma notícia deve obrigatoriamente ter um título e deve ter ao menos uma descrição, link ou imagem. Ela também deve ter obrigatoriamente uma tag de interesse. Somentes usuários logados podem criar uma notícia.</string>

    <!-- Activity Login -->
    <string name="activity_login_title">Entrar</string>
    <string name="activity_login_facom_text">Facom em Foco</string>
    <string name="activity_login_username">Nome de usuário</string>
    <string name="activity_login_password">Senha</string>
    <string name="activity_login_alert_username">Por favor digite seu nome de usuário</string>
    <string name="activity_login_alert_password">Por favor digite sua senha</string>

    <!-- Activity Interest Tags -->
    <string name="activity_interest_tags_title">Suas tags de interesse</string>
    <string name="activity_interest_tags_header">Marque as tags de notícias que deseja ser notificado</string>
    <string name="activity_interest_tags_save">Salvar</string>
    <string name="activity_interest_tags_save_success">Suas preferências foram salvas com sucesso!</string>

    <!-- Fragment News For You -->
    <string name="fragment_for_you_title">Notícias para você</string>

    <!-- Fragment News For All -->
    <string name="fragment_news_all_title">Notícias Facom</string>

    <!-- Fragment More Options -->
    <string name="fragment_more_options_title">Mais</string>
    <string name="fragment_more_options_interest_tags">Suas tags de interesse</string>
    <string name="fragment_more_options_login_as_teacher">Logar como professor</string>
    <string name="fragment_more_options_help">Ajuda</string>
</resources>
