<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/included_toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_large_vertical_margin"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="118dp"
                        android:src="@drawable/facom_graph"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView"
                        style="@style/BigLargeDarkGrayText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/activity_login_facom_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="@dimen/activity_large_vertical_margin"
                        android:text="@string/activity_login_username" />

                    <EditText
                        android:id="@+id/username_input"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="20sp"
                        android:background="@drawable/rectangle_rounded_all"
                        android:drawableStart="@drawable/baseline_person_black_18dp"
                        android:drawablePadding="5dp"
                        android:inputType="textPersonName"
                        android:paddingStart="10dp"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/hint_password" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="20sp"
                        android:background="@drawable/rectangle_rounded_all"
                        android:drawableStart="@drawable/baseline_lock_black_18dp"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        app:passwordToggleEnabled="true"
                        android:paddingStart="10dp"
                        android:textSize="16sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submit_button"
                        style="@style/ButtonDefaultStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_default"
                        android:paddingBottom="@dimen/padding_default"
                        android:layout_marginTop="@dimen/activity_large_vertical_margin"
                        android:text="@string/activity_login_sign_in"
                        android:theme="@style/AppButtonTheme" />
                </LinearLayout>

                <include
                    android:id="@+id/placeholder"
                    layout="@layout/loading_placeholder"
                    tools:visibility="gone" />
            </FrameLayout>
        </ScrollView>
    </LinearLayout>
</layout>
